--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,4 +1,12 @@
 <div class="jumbotron">
-  <h2>Welcome to Phoenix!</h2>
-  <p class="lead"><a href="https://github.com/elixircnx/openmaize">Openmaize</a></p>
+  <h2>Welcome to <a href="https://github.com/elixircnx/openmaize">Openmaize</a></h2>
+  <p class="lead">But first, a cautionary tale against forgetting your password</p>
+  <p>...Ali Baba told his brother, Cassim, about the treasure in a cave and that
+  he just needed to say "Open Sesame" at the entrance to get in. This he did, but
+  once he was inside, the door to the cave suddenly shut, and Cassim realized that
+  he had forgotten the password -- and no system administrator to help him.
+  "Open Barley!" he cried, and then he shouted out names of many other grains,
+  but all to no avail. Eventually, the robbers whose treasure it was came to the
+  cave and after killing and quartering Cassim, they hung him up at the entrance
+  to the cave as a warning to any others careless enough to forget their passwords...</p>
 </div>
