--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -4,7 +4,7 @@
   <p>...Ali Baba told his brother, Cassim, about the treasure in a cave and that
   he just needed to say "Open Sesame" at the entrance to get in. This he did, but
   once he was inside, the door to the cave suddenly shut, and Cassim realized that
-  he had forgotten the password -- and no system administrator to help him.
+  he had forgotten the password -- and no system administrator to help him!
   "Open Barley!" he cried, and then he shouted out names of many other grains,
   but all to no avail. Eventually, the robbers whose treasure it was came to the
   cave and after killing and quartering Cassim, they hung him up at the entrance
