Added signup new user

--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
           <li><a href="<%= page_path @conn, :index %>">Home</a></li>
           <li><a href="<%= user_path @conn, :index %>">Users</a></li>
-          <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+          <li><a href="<%= user_path @conn, :login %>">Login</a></li>
         </ul>
       </nav>
 
