--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -15,9 +15,12 @@
     <div class="container">
       <nav class="navbar navbar-default" role="navigation">
         <ul class="nav navbar-nav">
-          <li><a href="<%= page_path @conn, :index %>">Home</a></li>
+          <li><a href="<%= root_path @conn, :index %>">Home</a></li>
           <li><a href="<%= user_path @conn, :index %>">Users</a></li>
-          <li><a href="<%= user_path @conn, :login %>">Login</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+          <li><a href="<%= logout_path @conn, :logout, method: :post %>">Logout</a></li>
         </ul>
       </nav>
 
