--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -19,8 +19,11 @@
           <li><a href="<%= user_path @conn, :index %>">Users</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+          <%= if Map.has_key?(@conn.assigns, :current_user) do %>
           <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
+          <%= else %>
+          <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+          <%= end %>
         </ul>
       </nav>
 
