--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -7,6 +7,6 @@
   he had forgotten the password -- and no system administrator to help him!
   "Open Barley!" he cried, and then he shouted out names of many other grains,
   but all to no avail. Eventually, the robbers whose treasure it was came to the
-  cave and after killing and quartering Cassim, they hung him up at the entrance
+  cave and killed and quartered Cassim. Then they hung him up at the entrance
   to the cave as a warning to any others careless enough to forget their passwords...</p>
 </div>
