--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -1,4 +1,6 @@
-<h2>Listing users</h2>
+<h2>Hi, <%= String.capitalize @current_user[:name] %>, how's it hanging?</h2>
+
+<h3>Listing users</h3>
 
 <table class="table">
   <thead>
