--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -17,12 +17,13 @@
         <ul class="nav navbar-nav">
           <li><a href="<%= root_path @conn, :index %>">Home</a></li>
           <li><a href="<%= user_path @conn, :index %>">Users</a></li>
+          <li><a href="<%= admin_path @conn, :index %>">Admin</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <%= if Map.has_key?(@conn.assigns, :current_user) do %>
-          <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
-          <%= else %>
+          <%= if @current_user == nil do %>
           <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+          <%= else %>
+          <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
           <%= end %>
         </ul>
       </nav>
