--- a/web/templates/admin/index.html.eex
+++ b/web/templates/admin/index.html.eex
@@ -1,4 +1,30 @@
 <div class="jumbotron">
   <h2>Hi, <%= String.capitalize @current_user[:name] %>, how's it hanging?</h2>
-  <p class="lead">Shouldn't you be taking it easy?</p>
 </div>
+
+<h2>Listing users</h2>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Role</th>
+
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+<%= for user <- @users do %>
+    <tr>
+      <td><%= user.name %></td>
+      <td><%= user.role %></td>
+
+      <td class="text-right">
+        <%= link "Delete", to: admin_path(@conn, :delete, user), method: :delete, class: "btn btn-danger btn-xs" %>
+      </td>
+    </tr>
+<% end %>
+  </tbody>
+</table>
+
+<%= link "New user", to: admin_path(@conn, :new) %>
