--- a/web/templates/admin/new.html.eex
+++ b/web/templates/admin/new.html.eex
@@ -1,6 +1,35 @@
 <h2>New user</h2>
 
-<%= render "form.html", changeset: @changeset,
-                        action: admin_path(@conn, :create) %>
+<%= form_for @conn, admin_path(@conn, :create), [name: :user], fn f -> %>
+  <%= if f.errors != [] do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below:</p>
+      <ul>
+        <%= for {attr, message} <- f.errors do %>
+          <li><%= humanize(attr) %> <%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <label>Name</label>
+    <%= text_input f, :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Password</label>
+    <%= password_input f, :password, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <label>Role</label>
+    <%= text_input f, :role, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= submit "Submit", class: "btn btn-primary" %>
+  </div>
+<% end %>
 
 <%= link "Back", to: admin_path(@conn, :index) %>
