--- a/web/templates/admin/index.html.eex
+++ b/web/templates/admin/index.html.eex
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h2>Hi, <%= String.capitalize @current_user[:name] %>, how's it hanging?</h2>
+  <h2>Hi, <%= @current_user[:name] %>, how's it hanging?</h2>
 </div>
 
 <h2>Listing users</h2>
