--- a/web/templates/user/form.html.eex
+++ b/web/templates/user/form.html.eex
@@ -16,13 +16,8 @@
   </div>
 
   <div class="form-group">
-    <label>Password</label>
-    <%= password_input f, :password, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <label>Role</label>
-    <%= text_input f, :role, class: "form-control" %>
+    <label>About me</label>
+    <%= textarea f, :bio, class: "form-control" %>
   </div>
 
   <div class="form-group">
