--- a/web/templates/admin/new.html.eex
+++ b/web/templates/admin/new.html.eex
@@ -18,6 +18,11 @@
   </div>
 
   <div class="form-group">
+    <label>Email</label>
+    <%= text_input f, :email, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <label>Password</label>
     <%= password_input f, :password, class: "form-control" %>
   </div>
