--- a/web/templates/admin/new.html.eex
+++ b/web/templates/admin/new.html.eex
@@ -1,6 +1,6 @@
 <h2>New user</h2>
 
-<%= form_for @conn, admin_path(@conn, :create), [name: :user], fn f -> %>
+<%= form_for @conn, admin_path(@conn, :create), [as: :user], fn f -> %>
   <%= if f.errors != [] do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below:</p>
