--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -1,3 +1,3 @@
-<div class="jumbotron">
+<div class="hero">
   <h2>Hi, <%= String.capitalize @current_user[:name] %>, how's it hanging?</h2>
 </div>
