--- a/web/static/css/sidebar.styl
+++ b/web/static/css/sidebar.styl
@@ -4,9 +4,8 @@
 
 #root
   center(960px)
-  .sidebar
-    col(1/3)
-    background-color #ffffcc
+  .aside
+    col(1/4)
     ul
       list-style none
       li
@@ -20,9 +19,7 @@
           display inline
           margin 0 15px 0 0
 
-  .main
-    col(2/3)
-    background-color #cccccc
-    padding-top 20px
+  .article
+    col(3/4)
     +below(600px)
       stack()
