--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <h2>Welcome to <a href="https://github.com/elixircnx/openmaize">Openmaize</a></h2>
   <p>But first, a cautionary tale against forgetting your password</p>
   <p>...Ali Baba told his brother, Cassim, about the treasure in a cave and that
