Added axis as a dependency

--- a/web/static/css/main.styl
+++ b/web/static/css/main.styl
@@ -8,4 +8,11 @@ a
   color blue
   text-decoration none
   &:hover
-    color lighten(@color, 20%)
+    color lighten(@color, 30%)
+
+.btn
+  glossy-button()
+  click-shrink()
+
+label
+  label()
