--- a/web/static/css/sidebar.styl
+++ b/web/static/css/sidebar.styl
@@ -3,7 +3,7 @@
 @require 'rupture'
 
 #root
-  center(960px)
+  center()
   .aside
     col(1/4)
     ul
@@ -11,15 +11,15 @@
       li
         display block
         margin 0 0 10px 0
-    +below(600px)
+    +below(767px)
       stack()
       ul
-        center(200px)
+        center()
         li
           display inline
-          margin 0 15px 0 0
+          margin 0 15px
 
   .article
     col(3/4)
-    +below(600px)
+    +below(767px)
       stack()
