--- a/web/templates/admin/login.html.eex
+++ b/web/templates/admin/login.html.eex
@@ -2,7 +2,7 @@
 
 <%= form_for @conn, login_path(@conn, :login_user), [as: :user], fn f -> %>
   <%= if f.errors != [] do %>
-    <div class="alert alert-danger">
+    <div class="alert alert-error">
       <p>Oops, something went wrong! Please check the errors below:</p>
       <ul>
         <%= for {attr, message} <- f.errors do %>
@@ -12,18 +12,18 @@
     </div>
   <% end %>
 
-  <div class="form-group">
+  <div class="form">
     <label>Name</label>
-    <%= text_input f, :name, class: "form-control" %>
+    <%= text_input f, :name %>
   </div>
 
-  <div class="form-group">
+  <div class="form">
     <label>Password</label>
-    <%= password_input f, :password, class: "form-control" %>
+    <%= password_input f, :password %>
   </div>
 
-  <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+  <div class="form">
+    <%= submit "Submit", class: "btn" %>
   </div>
 <% end %>
 
