--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -18,27 +18,29 @@
         <h2>Authentication and authorization library for Elixir</h2>
       </div>
     </div>
-    <div id="root">
-      <div class="aside">
-        <ul>
-          <li><a href="<%= root_path @conn, :index %>">Home</a></li>
-          <li><a href="<%= user_path @conn, :index %>">Users</a></li>
-          <li><a href="<%= admin_path @conn, :index %>">Admin</a></li>
-          <%= if @current_user == nil do %>
-            <li><a href="<%= login_path @conn, :login %>">Login</a></li>
-          <%= else %>
-            <li><a href="<%= user_path(@conn, :show, @current_user[:id]) %>"><%= @current_user[:name] %></a></li>
-            <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
-          <%= end %>
-        </ul>
-      </div>
 
-      <div class="article">
-        <p class=""><%= get_flash(@conn, :info) %></p>
-        <p class=""><%= get_flash(@conn, :error) %></p>
+    <div class="container">
+      <p class="alert alert-info"><%= get_flash(@conn, :info) %></p>
+      <p class="alert alert-error"><%= get_flash(@conn, :error) %></p>
 
-        <%= @inner %>
+      <div id="root">
+        <div class="aside">
+          <ul>
+            <li><a href="<%= root_path @conn, :index %>">Home</a></li>
+            <li><a href="<%= user_path @conn, :index %>">Users</a></li>
+            <li><a href="<%= admin_path @conn, :index %>">Admin</a></li>
+            <%= if @current_user == nil do %>
+              <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+            <%= else %>
+              <li><a href="<%= user_path(@conn, :show, @current_user[:id]) %>"><%= @current_user[:name] %></a></li>
+              <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
+            <%= end %>
+          </ul>
+        </div>
 
+        <div class="article">
+          <%= @inner %>
+        </div>
       </div>
     </div> <!-- root -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
