--- a/web/templates/user/form.html.eex
+++ b/web/templates/user/form.html.eex
@@ -1,6 +1,6 @@
 <%= form_for @changeset, @action, fn f -> %>
   <%= if f.errors != [] do %>
-    <div class="alert alert-danger">
+    <div class="alert alert-error">
       <p>Oops, something went wrong! Please check the errors below:</p>
       <ul>
         <%= for {attr, message} <- f.errors do %>
@@ -12,12 +12,12 @@
 
   <h3><%= @current_user[:name] %></h3>
 
-  <div class="form-group">
+  <div class="form">
     <label>About me</label>
-    <%= textarea f, :bio, class: "form-control" %>
+    <%= textarea f, :bio %>
   </div>
 
-  <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+  <div class="form">
+    <%= submit "Submit", class: "btn" %>
   </div>
 <% end %>
