Removed axis dependency

--- a/web/static/css/forms.styl
+++ b/web/static/css/forms.styl
@@ -1,6 +1,6 @@
 .form
-  margin-bottom 15px
+  margin-bottom: 15px
   input[type='text']
-    input()
+    padding: 6px 12px
   input[type='password']
-    input()
+    padding: 6px 12px
