--- a/web/static/css/sidebar.styl
+++ b/web/static/css/sidebar.styl
@@ -4,20 +4,22 @@
 
 #root
   center()
+  +desktop()
+    center(pad: 60px)
   .aside
     col(1/4)
     ul
-      list-style none
+      list-style: none
       li
-        display block
-        margin 0 0 10px 0
+        display: block
+        margin: 0 0 10px 0
     +below(767px)
       stack()
       ul
         center()
         li
-          display inline
-          margin 0 15px
+          display: inline
+          margin: 0 15px
 
   .article
     col(3/4)
