--- a/web/static/css/flash.styl
+++ b/web/static/css/flash.styl
@@ -1,10 +1,28 @@
+@require 'vars'
+
+group()
+  &:after
+    content: ""
+    display: table
+    clear: both
+
+notice($width=false, $color=#eeeeee, $padding=10px)
+  group()
+  background-color: $color
+  border-radius: 5px
+  padding: $padding
+  border: 1px solid darken($color, 10%)
+  box-shadow: 1px 1px 3px rgba(#000,.05)
+  position: relative
+  width: $width if $width
+
 .alert:empty
-  display none
+  display: none
 .alert-info
-  notice($color: #d9edf7)
-  color #31708f
-  font-weight bold
+  notice($color: $blueinfo)
+  color: #31708f
+  font-weight: bold
 .alert-error
-  notice($color: #f2dede)
-  color #a94442
-  font-weight bold
+  notice($color: $rederror)
+  color: #a94442
+  font-weight: bold
