--- a/web/static/css/main.styl
+++ b/web/static/css/main.styl
@@ -1,18 +1,20 @@
+@require 'buttons'
+@require 'utils'
+@require 'vars'
+
 body
-  background-color #e8e8e8
+  background-color: $offwhite
 
 .container
-  padding 0 20px
+  padding: 0 20px
 
 a
-  color blue
-  text-decoration none
+  color: blue
+  text-decoration: none
   &:hover
-    color lighten(@color, 30%)
+    color: lighten(@color, 30%)
 
 .btn
   glossy-button()
   click-shrink()
-
-label
-  label()
+  rounded(12px)
