--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -42,7 +42,10 @@
           <%= @inner %>
         </div>
       </div>
-    </div> <!-- root -->
+    </div>
+
+    <footer></footer>
+
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
     <script>require("web/static/js/app")</script>
   </body>
