--- a/web/static/css/components/_buttons.styl
+++ b/web/static/css/components/_buttons.styl
@@ -1,5 +1,12 @@
 $default-color = #0074d9
 
+click-shrink($distance=0.92)
+  &:active
+    transform: scale($distance)
+
+rounded($br=999px)
+  border-radius: $br
+
 -parse($size)
   if $size == "small"
     return 10
@@ -10,7 +17,7 @@ $default-color = #0074d9
   else
     return $size
 
-glossy-button($color = $default-color, $size = "medium", $text-color = null, $shadow-color = null, $hover-color = null)
+glossy-button($color=$default-color, $size="medium", $text-color=null, $shadow-color=null, $hover-color=null)
   if $text-color
     $dark-text = light($text-color) ? true : false
   else
@@ -28,13 +35,13 @@ glossy-button($color = $default-color, $size = "medium", $text-color = null, $sh
 
   font-size: unit($parsed-size, 'px')
   padding: unit($height, 'px') unit($width, 'px')
-  border-radius: round($parsed-size/4.33333px)
+  border-radius: unit($parsed-size,'px')
   background-color: $color
   text-shadow: 1px 1px 1px $shadow-color
   border: s('1px solid %s', darken($color, 10%))
   color: $text-color
 
-  box-shadow: inset 0 1px 0 rgba(#fff,$strength)
+  box-shadow: inset 0 1px 0 rgba(#fff,0.3)
   cursor: pointer
   font-weight: bold
   font-family: $font-stack
@@ -42,7 +49,6 @@ glossy-button($color = $default-color, $size = "medium", $text-color = null, $sh
   text-align: center
   text-decoration: none
   display: inline-block
-  no-select()
 
   &:hover, &:focus
     background-position: 0 unit($height * -1, 'px')
