--- a/web/templates/admin/index.html.eex
+++ b/web/templates/admin/index.html.eex
@@ -18,7 +18,7 @@
       <td><%= user.role %></td>
 
       <td class="text-right">
-        <%= link "Delete", to: admin_path(@conn, :delete, user), method: :delete, class: "btn btn-danger btn-xs" %>
+        <%= link "Delete", to: admin_path(@conn, :delete, user), method: :delete, class: "btn btn-danger" %>
       </td>
     </tr>
 <% end %>
