--- a/web/templates/admin/new.html.eex
+++ b/web/templates/admin/new.html.eex
@@ -12,27 +12,27 @@
     </div>
   <% end %>
 
-  <div class="form">
+  <div class="form-group">
     <label>Name</label>
-    <%= text_input f, :name %>
+    <%= text_input f, :name, class: "form-control" %>
   </div>
 
-  <div class="form">
+  <div class="form-group">
     <label>Email</label>
-    <%= text_input f, :email %>
+    <%= text_input f, :email, class: "form-control" %>
   </div>
 
-  <div class="form">
+  <div class="form-group">
     <label>Password</label>
-    <%= password_input f, :password %>
+    <%= password_input f, :password, class: "form-control" %>
   </div>
 
-  <div class="form">
+  <div class="form-group">
     <label>Role</label>
-    <%= text_input f, :rolect %>
+    <%= text_input f, :role, class: "form-control" %>
   </div>
 
-  <div class="form">
+  <div class="form-group">
     <%= submit "Submit", class: "btn" %>
   </div>
 <% end %>
