--- a/web/static/css/components/_tables.styl
+++ b/web/static/css/components/_tables.styl
@@ -43,3 +43,8 @@ th
 
   .table
     background-color $body-bg
+
+.table-striped
+  > tbody > tr:nth-of-type(odd)
+    background-color $table-bg-accent
+
