--- a/web/static/css/layouts/_hero.styl
+++ b/web/static/css/layouts/_hero.styl
@@ -2,7 +2,7 @@
   position: relative
   overflow: hidden
   margin-bottom: 40px
-  background: linear-gradient(top, gray, #4863a0)
+  background: linear-gradient(top, gray, $steelblue)
   height: 350px
   +desktop()
     height: 450px
