--- a/web/static/css/layouts/_sidebar.styl
+++ b/web/static/css/layouts/_sidebar.styl
@@ -4,13 +4,9 @@
   +desktop()
     center(pad: 60px)
   .aside
-    col(1/4)
-    ul
-      list-style: none
-      li
-        display: block
-        margin: 0 0 10px 0
-        font-size: 18px
+    col(1/3)
+    listnone()
+    link($steelblue)
     +below(767px)
       stack()
       ul
@@ -20,6 +16,6 @@
           margin: 0 15px
 
   .article
-    col(3/4)
+    col(2/3)
     +below(767px)
       stack()
