--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Phoenix!</title>
+    <title>Hello Openmaize!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
@@ -44,7 +44,41 @@
       </div>
     </div>
 
-    <footer></footer>
+    <footer>
+      <div class="left-col">
+        <ul>
+          <li>
+            <a href="http://hexdocs.pm/openmaize">Openmaize docs</a>
+          </li>
+          <li>
+            <a href="https://github.com/elixircnx/openmaize">Openmaize source</a>
+          </li>
+        </ul>
+      </div>
+      <div class="mid-col">
+        <ul>
+          <li>
+            <a href="http://phoenixframework.org/docs/overview">Phoenix guides</a>
+          </li>
+          <li>
+            <a href="http://hexdocs.pm/phoenix">Phoenix docs</a>
+          </li>
+          <li>
+            <a href="https://github.com/phoenixframework/phoenix">Phoenix source</a>
+          </li>
+        </ul>
+      </div>
+      <div class="right-col">
+        <ul>
+          <li>
+            <a href="http://groups.google.com/group/elixir-lang-talk">Elixir mailing list</a>
+          </li>
+          <li>
+            <a href="http://groups.google.com/group/phoenix-talk">Phoenix mailing list</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
     <script>require("web/static/js/app")</script>
