Updated link styles

--- a/web/static/css/layouts/_sidebar.styl
+++ b/web/static/css/layouts/_sidebar.styl
@@ -6,7 +6,8 @@
   .aside
     col(1/3)
     listnone()
-    link($steelblue)
+    a
+      link($steelblue)
     +below(767px)
       stack()
       ul
