--- a/web/static/css/layouts/_footer.styl
+++ b/web/static/css/layouts/_footer.styl
@@ -7,12 +7,15 @@ footer
   .left-col
     col(1/3)
     listnone()
-    link(@color, true)
+    a
+      link(@color, true)
   .mid-col
     col(1/3)
     listnone()
-    link(@color, true)
+    a
+      link(@color, true)
   .right-col
     col(1/3)
     listnone()
-    link(@color, true)
+    a
+      link(@color, true)
