Updated link styles

--- a/web/static/css/layouts/_footer.styl
+++ b/web/static/css/layouts/_footer.styl
@@ -1,6 +1,5 @@
 footer
-  min-height: 200px
-  margin-top: 40px
+  height: 150px
   padding: 40px 0
   color: $offwhite
   background: linear-gradient(top, $steelblue, gray)
