Simplified footer style

--- a/web/static/css/layouts/_footer.styl
+++ b/web/static/css/layouts/_footer.styl
@@ -1,20 +1,15 @@
 footer
   height: 150px
-  padding: 40px 0
+  padding: 40px
   color: $offwhite
   background: linear-gradient(top, $steelblue, gray)
   .left-col
-    col(1/3)
-    listnone()
-    a
-      link(@color, true)
-  .mid-col
-    col(1/3)
+    col(1/2)
     listnone()
     a
       link(@color, true)
   .right-col
-    col(1/3)
+    col(1/2)
     listnone()
     a
       link(@color, true)
