--- a/web/static/css/main.styl
+++ b/web/static/css/main.styl
@@ -5,8 +5,16 @@
 @require './components/*'
 @require './layouts/*'
 
+html,
 body
-  background-color: $offwhite
+  height: 100%
+
+body
+  background-color: $background
+
+.wrapper
+  min-height: 100%
+  margin 0 auto -150px
 
 a
   link($steelblue)
