--- a/web/static/css/_variables.styl
+++ b/web/static/css/_variables.styl
@@ -1,7 +1,7 @@
 $body-bg = #fff
 $text-color = #333
 
-$offwhite = #e8e8e8
+$background = #e8e8e8
 $steelblue = #4863a0
 $rederror = #f2dede
 $blueinfo = #d9edf7
