--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -12,36 +12,39 @@
   </head>
 
   <body>
-    <div class="hero">
-      <div class="hero-inner">
-        <h1>Openmaize</h1>
-        <h2>Authentication and authorization library for Elixir</h2>
-      </div>
-    </div>
-
-    <div class="container">
-      <p class="alert alert-info"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-error"><%= get_flash(@conn, :error) %></p>
-
-      <div id="root">
-        <div class="aside">
-          <ul>
-            <li><a href="<%= root_path @conn, :index %>">Home</a></li>
-            <li><a href="<%= user_path @conn, :index %>">Users</a></li>
-            <li><a href="<%= admin_path @conn, :index %>">Admin</a></li>
-            <%= if @current_user == nil do %>
-              <li><a href="<%= login_path @conn, :login %>">Login</a></li>
-            <%= else %>
-              <li><a href="<%= user_path(@conn, :show, @current_user[:id]) %>"><%= @current_user[:name] %></a></li>
-              <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
-            <%= end %>
-          </ul>
-        </div>
-
-        <div class="article">
-          <%= @inner %>
+    <div class="wrapper">
+      <div class="hero">
+        <div class="hero-inner">
+          <h1>Openmaize</h1>
+          <h2>Authentication and authorization library for Elixir</h2>
         </div>
       </div>
+
+      <div class="container">
+        <p class="alert alert-info"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-error"><%= get_flash(@conn, :error) %></p>
+
+        <div id="root">
+          <div class="aside">
+            <ul>
+              <li><a href="<%= page_path @conn, :index %>">Home</a></li>
+              <li><a href="<%= user_path @conn, :index %>">Users</a></li>
+              <li><a href="<%= admin_path @conn, :index %>">Admin</a></li>
+                <%= if @current_user == nil do %>
+                <li><a href="<%= login_path @conn, :login %>">Login</a></li>
+                <%= else %>
+                <li><a href="<%= user_path(@conn, :show, @current_user[:id]) %>"><%= @current_user[:name] %></a></li>
+                <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
+                <%= end %>
+            </ul>
+          </div>
+
+          <div class="article">
+            <%= @inner %>
+          </div>
+        </div>
+      </div>
+      <div class="push"></div>
     </div>
 
     <footer>
