Removed sidebar and added navigation

--- a/web/static/css/_variables.styl
+++ b/web/static/css/_variables.styl
@@ -1,10 +1,19 @@
 $body-bg = #fff
 $text-color = #333
 
-$background = #e8e8e8
+$lightbg = #e5e5ff
+$darkbg = #1f394f
 $steelblue = #4863a0
 $rederror = #f2dede
 $blueinfo = #d9edf7
+
+$mobile-padding-horizontal = 10px
+$tablet-padding-horizontal = 60px
+$desktop-padding-horizontal = 120px
+
+$margin-section-vertical = 40px
+$padding-section-vertical = 40px
+$padding-section-vertical-mob = 10px
 
 $padding-base-vertical = 6px
 $padding-base-horizontal = 12px
