--- a/web/static/css/layouts/_hero.styl
+++ b/web/static/css/layouts/_hero.styl
@@ -8,7 +8,7 @@
     height: 450px
 
 .hero-inner
-  color: $background
+  color: $lightbg
   position: absolute
   margin: 80px
   font-style: oblique
