--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -19,11 +19,11 @@
             <li><a href="<%= page_path @conn, :index %>">Home</a></li>
             <li><a href="<%= user_path @conn, :index %>">Users</a></li>
             <li><a href="<%= admin_path @conn, :index %>">Admin</a></li>
-            <%= if @current_user == nil do %>
-              <li><a href="<%= login_path @conn, :login %>">Login</a></li>
-              <%= else %>
+              <%= if @current_user do %>
               <li><a href="<%= user_path(@conn, :show, @current_user[:id]) %>"><%= @current_user[:name] %></a></li>
               <li><a href="<%= logout_path @conn, :logout %>">Logout</a></li>
+              <%= else %>
+              <li><a href="<%= login_path @conn, :login %>">Login</a></li>
               <%= end %>
           </ul>
         </nav>
