Updated to Phoenix 1.1

--- a/web/templates/admin/index.html.eex
+++ b/web/templates/admin/index.html.eex
@@ -1,28 +1,7 @@
 <h2>Hi, <%= @current_user[:name] %>, how's it hanging?</h2>
 
-<h2>Listing users</h2>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Role</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for user <- @users do %>
-    <tr>
-      <td><%= user.name %></td>
-      <td><%= user.role %></td>
-
-      <td class="text-right">
-        <%= link "Delete", to: admin_path(@conn, :delete, user), method: :delete, class: "btn btn-danger" %>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
-
-<%= link "New user", to: admin_path(@conn, :new) %>
+<h2>Jobs to do</h2>
+<ul>
+    <li>Feed the tiger</li>
+    <li>Greet the wife</li>
+</ul>
