--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -1,1 +1,1 @@
-<h2>Hi, <%= String.capitalize @current_user[:name] %>, how's it hanging?</h2>
+<h2>Hi, <%= user_name @current_user %>, how's it hanging?</h2>
