--- a/web/templates/page/login.html.eex
+++ b/web/templates/page/login.html.eex
@@ -13,8 +13,8 @@
   <% end %>
 
   <div class="form-group">
-    <label>Name</label>
-    <%= text_input f, :name, class: "form-control" %>
+    <label>Email</label>
+    <%= text_input f, :email, class: "form-control" %>
   </div>
 
   <div class="form-group">
