--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -1,1 +1,1 @@
-<h2>Hi, <%= user_name @current_user %>, how's it hanging?</h2>
+<h2>Gosh, <%= user_name @current_user %>, it's so awfully nice to see you again!</h2>
