--- a/web/templates/page/askreset_form.html.eex
+++ b/web/templates/page/askreset_form.html.eex
@@ -1,6 +1,6 @@
-<h2>Login</h2>
+<h2>Reset password</h2>
 
-<%= form_for @conn, login_path(@conn, :login_user), [as: :user], fn f -> %>
+<%= form_for @conn, page_path(@conn, :askreset), [as: :user], fn f -> %>
   <%= if f.errors != [] do %>
     <div class="alert alert-error">
       <p>Oops, something went wrong! Please check the errors below:</p>
@@ -12,19 +12,14 @@
     </div>
   <% end %>
 
+  <h4>Please enter your email address</h4>
+
   <div class="form-group">
     <label>Email</label>
     <%= text_input f, :email, class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <label>Password</label>
-    <%= password_input f, :password, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
     <%= submit "Submit", class: "btn" %>
   </div>
 <% end %>
-
-<%= link "Forgot your password?", to: page_path(@conn, :askreset) %>
