--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -5,9 +5,10 @@ he just needed to say "Open Sesame" at the entrance to get in. This he did, but
 once he was inside, the door to the cave suddenly shut, and Cassim realized that
 he had forgotten the password -- and no system administrator to help him!
 "Open Barley!" he cried, and then he shouted out names of many other grains,
-but all to no avail. Eventually, the robbers whose treasure it was came to the
-cave and killed and quartered Cassim. Then they hung him up at the entrance
-to the cave as a warning to any others careless enough to forget their passwords...</p>
+perhaps even "Open Maize!", but all to no avail. Eventually, the robbers whose
+treasure it was came to the cave and killed and quartered Cassim. Then they
+hung him up at the entrance to the cave as a warning to any others careless
+enough to forget their passwords...</p>
 <h3>Openmaize</h3>
 <p>Openmaize is an authentication and authorization library for Elixir. It aims to be:</p>
 <ul>
