--- a/web/templates/admin/new.html.eex
+++ b/web/templates/admin/new.html.eex
@@ -19,7 +19,7 @@
 
   <div class="form-group">
     <label>Name</label>
-    <%= text_input f, :name, class: "form-control" %>
+    <%= text_input f, :username, class: "form-control" %>
   </div>
 
   <div class="form-group">
