--- a/web/templates/admin/new.html.eex
+++ b/web/templates/admin/new.html.eex
@@ -1,9 +1,9 @@
 <h2>New user</h2>
 
-<%= form_for @conn, admin_path(@conn, :create), [as: :user], fn f -> %>
+<%= form_for @changeset, admin_path(@conn, :create), fn f -> %>
   <%= if f.errors != [] do %>
     <div class="alert alert-error">
-      <p>Oops, something went wrong! Please check the errors below:</p>
+      <p>Please check the errors below:</p>
       <ul>
         <%= for {attr, message} <- f.errors do %>
           <li><%= humanize(attr) %> <%= message %></li>
