--- a/web/templates/user/form.html.eex
+++ b/web/templates/user/form.html.eex
@@ -1,7 +1,7 @@
 <%= form_for @changeset, @action, fn f -> %>
   <%= if f.errors != [] do %>
     <div class="alert alert-error">
-      <p>Oops, something went wrong! Please check the errors below:</p>
+      <p>Please check the errors below:</p>
       <ul>
         <%= for {attr, message} <- f.errors do %>
           <li><%= humanize(attr) %> <%= message %></li>
