--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -10,7 +10,7 @@ treasure it was came to the cave and killed and quartered Cassim. Then they
 hung him up at the entrance to the cave as a warning to any others careless
 enough to forget their passwords...</p>
 <h3>Openmaize</h3>
-<p>Openmaize is an authentication and authorization library for Elixir. It aims to be:</p>
+<p>Openmaize is an authentication library for Elixir. It aims to be:</p>
 <ul>
   <li>secure</li>
   <li>lightweight</li>
